--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,21 +2,35 @@
 # libraries
 junit = "4.13.2"
 opentest4j = "1.3.0"
+acpKotlinSdk = "0.15.3"
+kotlinxCoroutines = "1.10.2"
+kotlinxSerialization = "1.8.1"
+kotlinxIo = "0.8.0"
+snakeyaml = "2.4"
 
 # plugins
 changelog = "2.5.0"
 intelliJPlatform = "2.11.0"
 kotlin = "2.3.0"
+kotlinSerialization = "2.3.0"
 kover = "0.9.5"
 qodana = "2025.3.1"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 opentest4j = { group = "org.opentest4j", name = "opentest4j", version.ref = "opentest4j" }
+acp-sdk = { module = "com.agentclientprotocol:acp", version.ref = "acpKotlinSdk" }
+acp-model = { module = "com.agentclientprotocol:acp-model", version.ref = "acpKotlinSdk" }
+kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutines" }
+kotlinx-coroutines-swing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing", version.ref = "kotlinxCoroutines" }
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
+kotlinx-io-core = { module = "org.jetbrains.kotlinx:kotlinx-io-core", version.ref = "kotlinxIo" }
+snakeyaml = { module = "org.yaml:snakeyaml", version.ref = "snakeyaml" }
 
 [plugins]
 changelog = { id = "org.jetbrains.changelog", version.ref = "changelog" }
 intelliJPlatform = { id = "org.jetbrains.intellij.platform", version.ref = "intelliJPlatform" }
 kotlin = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlinSerialization" }
 kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
 qodana = { id = "org.jetbrains.qodana", version.ref = "qodana" }
