Add Terminal Integration with file path hyperlink detection
- Implement TerminalIntegration.kt with ConsoleFilterProvider
- Support file path detection in terminal output:
  - Absolute paths: /path/to/file
  - Relative paths: ./file, ../file
  - Line numbers: file.kt:123
  - Line and column: file.kt:123:45
- Create FilePathFilter for regex-based path detection
- Create FilePathHyperlinkInfo for opening files with line/column navigation
- Register ConsoleFilterProvider in plugin.xml
- Add comprehensive test suite with 8 test cases
- Fix pre-existing test error in IdeToolsDiagnosticsTest.kt

Agent-Id: agent-da33fd5b-fa14-47ac-96a7-e6996e850afd

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -32,5 +32,7 @@
         <projectService serviceImplementation="com.github.phodal.acpmanager.config.AcpConfigService"/>
         <projectService serviceImplementation="com.github.phodal.acpmanager.acp.AcpSessionManager"/>
         <projectService serviceImplementation="com.github.phodal.acpmanager.ide.IdeAcpClient"/>
+
+        <consoleFilterProvider implementation="com.github.phodal.acpmanager.ide.TerminalIntegration"/>
     </extensions>
 </idea-plugin>
