--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = com.github.phodal.agentdispatcher
-pluginName = agent-dispatcher
+pluginName = Agent Dispatcher
 pluginRepositoryUrl = https://github.com/phodal/agent-dispatcher
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.2
