--- a/routa-js/package.json
+++ b/routa-js/package.json
@@ -11,21 +11,22 @@
   "dependencies": {
     "@agentclientprotocol/sdk": "^0.14.1",
     "@modelcontextprotocol/sdk": "^1.26.0",
+    "eventsource": "^3.0.0",
+    "glob": "^11.0.0",
+    "gray-matter": "^4.0.3",
     "next": "^15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "zod": "^3.24.0",
     "uuid": "^11.1.0",
-    "glob": "^11.0.0",
-    "gray-matter": "^4.0.3",
-    "eventsource": "^3.0.0"
+    "zod": "^3.24.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.58.2",
+    "@types/eventsource": "^1.1.15",
     "@types/node": "^22.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@types/uuid": "^10.0.0",
-    "@types/eventsource": "^1.1.15",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.0",
