--- a/routa-js/package.json
+++ b/routa-js/package.json
@@ -34,6 +34,7 @@
     "next": "^15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "smol-toml": "^1.6.0",
     "uuid": "^11.1.0",
     "zod": "^3.24.0"
   },
